src/main/java/clang/ClangLibrary.java

	/**
	 * \brief Reparse the source files that produced this translation unit.<br>
	 * * This routine can be used to re-parse the source files that originally<br>
	 * created the given translation unit, for example because those source files<br>
	 * have changed (either on disk or as passed via \p unsaved_files). The<br>
	 * source code will be reparsed with the same command-line options as it<br>
	 * was originally parsed. <br>
	 * * Reparsing a translation unit invalidates all cursors and source locations<br>
	 * that refer into that translation unit. This makes reparsing a translation<br>
	 * unit semantically equivalent to destroying the translation unit and then<br>
	 * creating a new translation unit with the same command-line arguments.<br>
	 * However, it may be more efficient to reparse a translation <br>
	 * unit using this routine.<br>
	 * * \param TU The translation unit whose contents will be re-parsed. The<br>
	 * translation unit must originally have been built with <br>
	 * \c clang_createTranslationUnitFromSourceFile().<br>
	 * * \param num_unsaved_files The number of unsaved file entries in \p<br>
	 * unsaved_files.<br>
	 * * \param unsaved_files The files that have not yet been saved to disk<br>
	 * but may be required for parsing, including the contents of<br>
	 * those files.  The contents and name of these files (as specified by<br>
	 * CXUnsavedFile) are copied when necessary, so the client only needs to<br>
	 * guarantee their validity until the call to this function returns.<br>
	 * <br>
	 * \param options A bitset of options composed of the flags in CXReparse_Flags.<br>
	 * The function \c clang_defaultReparseOptions() produces a default set of<br>
	 * options recommended for most uses, based on the translation unit.<br>
	 * * \returns 0 if the sources could be reparsed. A non-zero value will be<br>
	 * returned if reparsing was impossible, such that the translation unit is<br>
	 * invalid. In such cases, the only valid call for \p TU is <br>
	 * \c clang_disposeTranslationUnit(TU).<br>
	 * Original signature : <code>int clang_reparseTranslationUnit(CXTranslationUnit, unsigned, CXUnsavedFile*, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1297</i>
	 */
	int clang_reparseTranslationUnit(ClangLibrary.CXTranslationUnit TU, int num_unsaved_files, CXUnsavedFile unsaved_files, int options);
	/**
	 * Original signature : <code>char* clang_getTUResourceUsageName(CXTUResourceUsageKind)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1333</i>
	 */
	String clang_getTUResourceUsageName(int kind);
	/**
	 * \brief Return the memory usage of a translation unit.  This object<br>
	 *  should be released with clang_disposeCXTUResourceUsage().<br>
	 * Original signature : <code>CXTUResourceUsage clang_getCXTUResourceUsage(CXTranslationUnit)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1363</i>
	 */
	clang.CXTUResourceUsage.ByValue clang_getCXTUResourceUsage(ClangLibrary.CXTranslationUnit TU);
	/**
	 * Original signature : <code>void clang_disposeCXTUResourceUsage(CXTUResourceUsage)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1365</i>
	 */
	void clang_disposeCXTUResourceUsage(clang.CXTUResourceUsage.ByValue usage);
	/**
	 * \brief Retrieve the NULL cursor, which represents no entity.<br>
	 * Original signature : <code>CXCursor clang_getNullCursor()</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2071</i>
	 */
	CXCursor.ByValue clang_getNullCursor();
	/**
	 * \brief Retrieve the cursor that represents the given translation unit.<br>
	 * * The translation unit cursor can be used to start traversing the<br>
	 * various declarations within the given translation unit.<br>
	 * Original signature : <code>CXCursor clang_getTranslationUnitCursor(CXTranslationUnit)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2079</i>
	 */
	CXCursor.ByValue clang_getTranslationUnitCursor(ClangLibrary.CXTranslationUnit CXTranslationUnit1);
	/**
	 * \brief Determine whether two cursors are equivalent.<br>
	 * Original signature : <code>int clang_equalCursors(CXCursor, CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2084</i>
	 */
	int clang_equalCursors(CXCursor.ByValue CXCursor1, CXCursor.ByValue CXCursor2);
	/**
	 * \brief Returns non-zero if \p cursor is null.<br>
	 * Original signature : <code>int clang_Cursor_isNull(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2089</i>
	 */
	int clang_Cursor_isNull(CXCursor.ByValue cursor);
	/**
	 * \brief Compute a hash value for the given cursor.<br>
	 * Original signature : <code>int clang_hashCursor(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2094</i>
	 */
	int clang_hashCursor(CXCursor.ByValue CXCursor1);
	/**
	 * \brief Retrieve the kind of the given cursor.<br>
	 * Original signature : <code>CXCursorKind clang_getCursorKind(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2099</i>
	 */
	int clang_getCursorKind(CXCursor.ByValue CXCursor1);
	/**
	 * \brief Determine whether the given cursor kind represents a declaration.<br>
	 * Original signature : <code>int clang_isDeclaration(CXCursorKind)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2104</i>
	 */
	int clang_isDeclaration(int arg1);
	/**
	 * \brief Determine whether the given cursor kind represents a simple<br>
	 * reference.<br>
	 * * Note that other kinds of cursors (such as expressions) can also refer to<br>
	 * other cursors. Use clang_getCursorReferenced() to determine whether a<br>
	 * particular cursor refers to another entity.<br>
	 * Original signature : <code>int clang_isReference(CXCursorKind)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2114</i>
	 */
	int clang_isReference(int arg1);
	/**
	 * \brief Determine whether the given cursor kind represents an expression.<br>
	 * Original signature : <code>int clang_isExpression(CXCursorKind)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2119</i>
	 */
	int clang_isExpression(int arg1);
	/**
	 * \brief Determine whether the given cursor kind represents a statement.<br>
	 * Original signature : <code>int clang_isStatement(CXCursorKind)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2124</i>
	 */
	int clang_isStatement(int arg1);
	/**
	 * \brief Determine whether the given cursor kind represents an attribute.<br>
	 * Original signature : <code>int clang_isAttribute(CXCursorKind)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2129</i>
	 */
	int clang_isAttribute(int arg1);
	/**
	 * \brief Determine whether the given cursor kind represents an invalid<br>
	 * cursor.<br>
	 * Original signature : <code>int clang_isInvalid(CXCursorKind)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2135</i>
	 */
	int clang_isInvalid(int arg1);
	/**
	 * \brief Determine whether the given cursor kind represents a translation<br>
	 * unit.<br>
	 * Original signature : <code>int clang_isTranslationUnit(CXCursorKind)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2141</i>
	 */
	int clang_isTranslationUnit(int arg1);
	/**
	 * \brief Determine whether the given cursor represents a preprocessing<br>
	 * element, such as a preprocessor directive or macro instantiation.<br>
	 * Original signature : <code>int clang_isPreprocessing(CXCursorKind)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2147</i>
	 */
	int clang_isPreprocessing(int arg1);
	/**
	 * \brief Determine whether the given cursor represents a currently<br>
	 *  unexposed piece of the AST (e.g., CXCursor_UnexposedStmt).<br>
	 * Original signature : <code>int clang_isUnexposed(CXCursorKind)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2153</i>
	 */
	int clang_isUnexposed(int arg1);
	/**
	 * \brief Determine the linkage of the entity referred to by a given cursor.<br>
	 * Original signature : <code>CXLinkageKind clang_getCursorLinkage(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2179</i>
	 */
	int clang_getCursorLinkage(CXCursor.ByValue cursor);
	/**
	 * \brief Determine the availability of the entity that this cursor refers to,<br>
	 * taking the current target platform into account.<br>
	 * * \param cursor The cursor to query.<br>
	 * * \returns The availability of the cursor.<br>
	 * Original signature : <code>CXAvailabilityKind clang_getCursorAvailability(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2189</i>
	 */
	int clang_getCursorAvailability(CXCursor.ByValue cursor);
	/**
	 * \brief Determine the availability of the entity that this cursor refers to<br>
	 * on any platforms for which availability information is known.<br>
	 * * \param cursor The cursor to query.<br>
	 * * \param always_deprecated If non-NULL, will be set to indicate whether the <br>
	 * entity is deprecated on all platforms.<br>
	 * * \param deprecated_message If non-NULL, will be set to the message text <br>
	 * provided along with the unconditional deprecation of this entity. The client<br>
	 * is responsible for deallocating this string.<br>
	 * * \param always_unavailable If non-NULL, will be set to indicate whether the<br>
	 * entity is unavailable on all platforms.<br>
	 * * \param unavailable_message If non-NULL, will be set to the message text<br>
	 * provided along with the unconditional unavailability of this entity. The <br>
	 * client is responsible for deallocating this string.<br>
	 * * \param availability If non-NULL, an array of CXPlatformAvailability instances<br>
	 * that will be populated with platform availability information, up to either<br>
	 * the number of platforms for which availability information is available (as<br>
	 * returned by this function) or \c availability_size, whichever is smaller.<br>
	 * * \param availability_size The number of elements available in the <br>
	 * \c availability array.<br>
	 * * \returns The number of platforms (N) for which availability information is<br>
	 * available (which is unrelated to \c availability_size).<br>
	 * * Note that the client is responsible for calling <br>
	 * \c clang_disposeCXPlatformAvailability to free each of the <br>
	 * platform-availability structures returned. There are <br>
	 * \c min(N, availability_size) such structures.<br>
	 * Original signature : <code>int clang_getCursorPlatformAvailability(CXCursor, int*, CXString*, int*, CXString*, CXPlatformAvailability*, int)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2265</i><br>
	 * @deprecated use the safer methods {@link #clang_getCursorPlatformAvailability(clang.CXCursor.ByValue, java.nio.IntBuffer, clang.CXString, java.nio.IntBuffer, clang.CXString, clang.CXPlatformAvailability, int)} and {@link #clang_getCursorPlatformAvailability(clang.CXCursor.ByValue, com.sun.jna.ptr.IntByReference, clang.CXString, com.sun.jna.ptr.IntByReference, clang.CXString, clang.CXPlatformAvailability, int)} instead
	 */
	@Deprecated
	int clang_getCursorPlatformAvailability(CXCursor.ByValue cursor, IntByReference always_deprecated, CXString deprecated_message, IntByReference always_unavailable, CXString unavailable_message, CXPlatformAvailability availability, int availability_size);
